Fix margin spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,14 +14,17 @@ body {
   font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
 }
-h1, h2 {
-  margin-top: 24px;
+
+h1, h2, h3 {
+  margin-top: 42px;
+  margin-bottom: 12px;
 }
 h1 {
   text-align: center;
   line-height: 1;
   margin-bottom: 24px;
 }
+
 #home-link {
   color:maroon;
   border: none;
